rnsc/test_data/rns_integration/error/parser/method_directive/missing_descriptor_recovers.rns
; Tests that parser continues after missing method descriptor error and reports subsequent errors
; Expected errors: E-017 (missing descriptor), E-007 (unknown token)

.class public MyClass
.super java/lang/Object

.method public static main

     unknown_token ; <- still reported after recovery

.class_end
